changes bird to kale, pipes to stars

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     
 <head>
   <meta charset="utf-8" />
-  <title>Flappy Bird Clone</title>
-
+  <title>Kale - Flappy Bird Style</title>
+  <!-- Credit LessMilk.com for tutorial-->
   <style>
     #game_div, p {
       width: 400px;
